--- a/FirstWebMVC/Views/Student/Demo.cshtml
+++ b/FirstWebMVC/Views/Student/Demo.cshtml
@@ -2,3 +2,4 @@
 dotnet aspnet-codegenerator controller -name StudentController -m Student -dc FirstWebMvc.Data.ApplicationDbContext --relativeFolderPath Controllers --useDefaultLayout --referenceScriptLibraries --databaseProvider sqlite
 dotnet ef migrations add "Migration_Note"
 dotnet ef database update
+dotnet aspnet-codegenerator controller -name EmployeeController -m Employee -dc FirstWebMvc.Data.ApplicationDbContext --relativeFolderPath Controllers --useDefaultLayout --referenceScriptLibraries --databaseProvider sqlite
